tests/reference/asr-test_dict_key2-18ea6fb.stderr
semantic error: Unhashable type: 'dict[i32, Allocatable[str]]'
 --> tests/errors/test_dict_key2.py:4:19
  |
4 |     my_dict: dict[dict[i32, str], str] = {{1: "a", 2: "b"}: "first", {3: "c", 4: "d"}: "second"}
  |                   ^^^^^^^^^^^^^^ Mutable type 'dict[i32, Allocatable[str]]' cannot become a key in dict. Hint: Use an immutable type for key.
